<resources>
    <string name="app_name">TimeFlow</string>
    <string name="open_nav">Open Navigation drawer</string>
    <string name="close_nav">Open Navigation drawer</string>
    <string name="project">Project name</string>
    <string name="label2">Add manual entry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email">Email</string>
    <string name="Firstname">First name</string>
    <string name="Required">Required</string>
    <string name="Password">Password</string>
    <string name="LastName">Last name</string>
    <string name="ConfirmPassword">Confirm password</string>
</resources>